# toy_package

./: .readthedocs.yaml  CITATION.cff  README.md  environment.yml  pyproject.toml  report.html  run_tests.sh  t0_test.py
.github/workflows/: docs.yml  release.yml  test.yml
docs/: conf.py  index.rst
docs/api/: modules.rst
tests/: __init__.py  test_api_detect.py  test_api_statistics.py
toy/: __init__.py  cli.py
toy/api/: __init__.py  detect.py  statistics.py
toy/utils/: __init__.py  ar_detection_utils.py  ar_statistics_utils.py
