[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toy"
version = "0.1.0"
description = "A toy package for atmospheric river metrics analysis"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
dependencies = [
    "numpy>=1.21,<2.0"
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
toy = "toy.cli:main"
